# gedit-plugins

./: Makefile.am  NEWS  README  configure.ac
help/: Makefile.am
help/C/: bookmarks.page  bracket-comp.page  character-map.page  code-assistance.page  code-comment.page  color-picker.page  commander.page  dashboard.page  draw-spaces.page  index.page  join-split-lines.page  multi-edit.page  session-saver.page  tag-list.page  terminal.page  text-size.page  word-completion.page
help/es/: es.po
help/pt_BR/: pt_BR.po
plugins/bookmarks/: Makefile.am  gedit-bookmarks-plugin.c
plugins/bracketcompletion/: bracketcompletion.plugin.desktop.in.in  bracketcompletion.py
plugins/charmap/: charmap.plugin.desktop.in.in
plugins/charmap/charmap/: __init__.py  panel.py
plugins/codecomment/: codecomment.plugin.desktop.in.in
plugins/colorpicker/: colorpicker.plugin.desktop.in.in  colorpicker.py
plugins/colorschemer/schemer/: schemer.ui
plugins/commander/: commander.plugin.desktop.in.in
plugins/commander/commander/: entry.py  history.py  info.py
plugins/commander/commander/commands/: __init__.py  completion.py  metamodule.py  method.py  module.py  result.py  rollbackimporter.py
plugins/commander/modules/: align.py  edit.py  format.py  grep.py  help.py  move.py  shell.py
plugins/dashboard/: dashboard.plugin.desktop.in.in
plugins/dashboard/dashboard/: __init__.py  dashboard.py  utils.py
plugins/drawspaces/: drawspaces.plugin.desktop.in.in
plugins/git/: Makefile.am  git.plugin.desktop.in.in
plugins/git/git/: Makefile.am
plugins/joinlines/: joinlines.plugin.desktop.in.in
plugins/multiedit/: multiedit.plugin.desktop.in.in
plugins/multiedit/multiedit/: __init__.py  documenthelper.py
plugins/smartspaces/: Makefile.am  gedit-smartspaces-plugin.ui  org.gnome.gedit.plugins.smartspaces.gschema.xml  org.gnome.gedit.plugins.smartspaces.gschema.xml.in.in  smartspaces.plugin.desktop.in.in  smartspaces.py
plugins/synctex/: synctex.plugin.desktop.in.in
plugins/synctex/synctex/: evince_dbus.py  synctex.py
plugins/terminal/: org.gnome.gedit.plugins.terminal.gschema.xml.in.in  terminal.plugin.desktop.in.in  terminal.py
plugins/textsize/: textsize.plugin.desktop.in.in
plugins/textsize/textsize/: __init__.py  documenthelper.py
po/: POTFILES.in  POTFILES.skip  cs.po  el.po  es.po  hu.po  it.po  lt.po  pl.po  pt_BR.po  sl.po  sr.po  sr@latin.po
(+4 files in other folders)
