@YELP_HELP_RULES@

HELP_ID = gedit

HELP_FILES = \
	bookmarks.page \
	bracket-comp.page \
	character-map.page \
	code-assistance.page \
	code-comment.page \
	color-picker.page \
	commander.page \
	dashboard.page \
	draw-spaces.page \
	join-split-lines.page \
	multi-edit.page \
	session-saver.page \
	tag-list.page \
	terminal.page \
	text-size.page \
	word-completion.page

HELP_MEDIA =

HELP_LINGUAS =  ar bg ca cs da de el es eu fi fr gl hu it ja ko lv oc pt_BR ru sl sv te th uk zh_CN zh_HK zh_TW
